src/app/shared/components/tiles/tiles.component.scss
.tile {
  display: inline-block;
  cursor: pointer;
  vertical-align: top;
  text-align: left;
  outline: none;
}

.tile-poster{
    width: 100%;
}

.tile-poster:hover {
  cursor: pointer;
}

.tile:hover .tile-movie-infos {
  visibility: visible;
  transition: overflow .2s ease;
}

.movie-title {
  font-size: large;
  font-weight: bold;
  margin-bottom: 2px;
}

.movie-year {
  font-style: italic;
  color: darkslategrey;
}

.tile-movie-infos {
  visibility: hidden;
  background-color: #ffffffcc;
  position: absolute;
  padding: 10px;
  outline: none;
  height: 100%;
  width: 100%;
}

.movie-overview {
  overflow: hidden;
  text-overflow: ellipsis;
  position: relative;
  line-height: 1.5em;
  max-height: 12.5em;
  margin: 12px 0;
  background: linear-gradient(black 250px, #ffffffcc);
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.btn-bookmark-movie {
  position: absolute;
  bottom: 20px;
  right: 20px;
}

.tile-movie-title {
  font-size: 16px;
}

mat-chip:hover {
  cursor: pointer;
}

button.mat-fab:hover {
  opacity: 0.8;
}

